Fixes filter overflow
Fixes #87

--- a/superset/static/blotout.css
+++ b/superset/static/blotout.css
@@ -156,3 +156,7 @@ body > footer {
 #main-menu + div {
   background: none;
 }
+
+.slice_container .filter_box > div {
+  overflow: initial !important;
+}
